2001-07-09  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (get_all_lists)  Bugfix:  Use the first return
	value to determine if access is permitted.  Thanks to David
	Roodman.

	* lib/Mj/MTAConfig.pm:  (add_alias)  Correct the VUT entries
	for -(un)subscribe addresses.  Thanks to Roger Klorese.

	* setup/newdomain.pl:  Bugfix:  Consider $config a global
	variable.  Thanks to Roger Klorese.

2001-07-04  Michael Yount <csf@moscow.com>

	* lib/Mj/Format.pm:  (lists)  Use an empty string instead
	of a question mark in variable expansions to avoid incorrect
        URLs.  Thanks to Gavin Walker.

2001-06-23  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/BounceHandler.pm (handle_bounce_user): Add addr,
	fulladdr, and host variables to bounce_rules.

	* lib/Mj/CommandProps.pm: ditto.
	
2001-06-23  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (regen)  Bugfix:  Do not parse 
	addresses in DEFAULT configuration files.

2001-06-22  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_make_list)  Bugfix:  Use the "_install"
	template instead of the GLOBAL defaults to initialize 
	mailing lists.

2001-06-22  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/Util.pm (n_defaults): The default file for a bounce probe
	is "bounceprobe".

	* lib/Mj/Token.pm (confirm): Set token type to 'probe' as
	appropriate.  Set envelope extention properly for probe tokens.

	* lib/Majordomo.pm (_put): Preliminary: allow put-delete.
	(_list_file_get): Search per-language default files before
	searching non-language-specific default files.

2001-06-20  Michael Yount <csf@moscow.com>

	* bin/mj_shell:  Note that the -D option causes the debugging
	output to be sent to stderr, not stdout.  Thanks to Paul
	Hancock.

	* lib/Majordomo.pm:  (_list_sync_owners)  Bugfix:  Use the
	correct address when the GLOBAL:owners auxiliary list is
	changed.

	* lib/Mj/Archive.pm:  (_expand_message_range) Bugfix: 
	Initialize the archive name and number correctly.